# NLP-restaurant-order-system

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MenuTranslationAssistant.py  PROJECT_IMPROVEMENTS.md  QUICKSTART.md  README.md  assistant_actions.py  config.py  nlu.py  pyproject.toml  run_chatbot.py  run_webapp.py  task_manager.py
.github/workflows/: ci.yml
docs/: api.md  architecture.md
examples/: usage_examples.md
flask-webapp/: __init__.py
src/chatbot/: config.py
src/chatbot/core/: actions.py  dialog_manager.py  nlu.py
src/chatbot/services/: speech.py
src/webapp/app/: __init__.py
