[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-ordering-chatbot"
version = "1.0.0"
description = "Bilingual restaurant ordering system with NLU capabilities"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["nlp", "chatbot", "restaurant", "bilingual", "flask"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
    "pattern~=3.6",
    "pandas~=1.5.2",
    "spacy~=3.3.1",
    "transformers~=4.24.0",
    "flask~=2.2.2",
    "gTTS~=2.3.0",
    "PlaySound~=1.2.2",
    "SpeechRecognition~=3.90",
    "scikit-learn~=1.1.3",
    "nltk~=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310']

[tool.isort]
profile = "black"
line_length = 88
